# ruler

./: .env_example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  LICENSE  README.md  TOOLS.md  docker-compose.override.yml  docker-compose.penpot.yml  opencode.example.json  pyproject.toml  setup.sh
ruler-skills/: README.md
ruler-skills/_core/: __init__.py  loader.py  registry.py
ruler-skills/best-practices/: naming-conventions.md
ruler-skills/components/: button-patterns.md
ruler-skills/design-basics/: create-frame.md
ruler-skills/workflow/: design-to-code.md  full-page-build.md
src/: config.py  gateway.py
src/penpot_mcp/: __init__.py  config.py  context.py  server.py  ws_controller.py
src/penpot_mcp/services/: api.py  changes.py  db.py  transit.py
src/penpot_mcp/tools/: components.py  context.py  create.py  database.py  export.py  files.py  media.py  modify.py  projects.py  shapes.py  smart_refs.py  svg_import.py
src/penpot_mcp/transformers/: css.py  layout.py  svg.py
src/plugin/: manifest.json  plugin.js  ui.html
src/ruler_ext/: __init__.py
src/ruler_ext/enhanced_tools/: __init__.py
src/ruler_ext/jsx_exporter/: __init__.py
src/ruler_ext/skills/: __init__.py
src/ruler_ext/versioning/: __init__.py
src/tools/: advanced.py  comments.py  components.py  database.py  text.py
