[project]
name = "penpot-mcp"
version = "0.1.0"
description = "MCP server for self-hosted Penpot — AI-powered UI/UX design and prototyping"
readme = {text = "", content-type = "text/plain"}
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.9.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "uvicorn>=0.34.0",
    "websockets>=16.0",
]

[project.scripts]
penpot-mcp = "penpot_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/penpot_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "integration: tests requiring live Penpot instance",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.15.2",
]
